# LiveKit_meetingSystem

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  README.md  build.cmd  cmake_manual_build_guide.md  dabao.md  debug_output.txt  debug_output2.txt  debug_output3.txt  debug_output4.txt  expend.md  pool.js  server.js  summary.md  video_module_explanation.md  xxx_详细注释版.js
.github/workflows/: ci.yml  release.yml
aliyun/: server.js
all_md/: BUILD_AND_CI_GUIDE.md
cmake/: FetchFFmpeg.cmake  FetchGoogleTest.cmake  FetchLiveKit.cmake
docs/: AI_模块技术文档.md  CLI_REFERENCE.md  VS2022_Qt_Guide.md  dabao.md  github_pr_workflow.md  gtest_usage_guide.md  implementation_plan.md
extend/: .gitignore
extend/livekit-sdk-windows-x64-debug/include/livekit/: build.h  track.h
livekit-sdk-windows-x64/include/livekit/: build.h
resources/: qml.qrc
resources/qml/: main.qml
resources/qml/components/: AIPanel.qml  ChatPanel.qml  ControlBar.qml  MeetingButton.qml  ParticipantPanel.qml  TopBar.qml  VideoGrid.qml  VideoItem.qml
resources/qml/dialogs/: ConnectionLoadingDialog.qml  CreateMeetingDialog.qml  JoinMeetingDialog.qml  ScheduleMeetingDialog.qml  SettingsDialog.qml  VideoPreviewDialog.qml
resources/qml/pages/: HomePage.qml  LoginPage.qml  MeetingRoom.qml  RegisterPage.qml
resources/qml/styles/: Theme.qml
src/: aiassistant.cpp  aiassistant.h  audiomixer.cpp  audiomixer.h  chatmodel.cpp  chatmodel.h  livekitmanager.cpp  livekitmanager.h  main.cpp  mediacapture.cpp  mediacapture.h  meetingcontroller.cpp  meetingcontroller.h  meetingrecorder.cpp  meetingrecorder.h  participantmodel.cpp  participantmodel.h  remoteaudioplayer.cpp  remoteaudioplayer.h  remotevideorenderer.cpp  remotevideorenderer.h  screencapture.cpp  screencapture.h  videocompositor.cpp  videocompositor.h
tests/: CMakeLists.txt
tests/integration/: test_meeting_flow.cpp
tests/unit/: test_chat_model.cpp  test_livekit_manager.cpp  test_meeting_controller.cpp  test_participant_model.cpp
